# junior

./: .dockerignore  .env.example  .gitignore  .gitlab-ci.example.yml  .junior.yaml  CHANGELOG.md  CLAUDE.md  CNAME  DOCS_GUIDELINES.md  Dockerfile  Makefile  README.md  ROADMAP.md  STARTUP.md  debug_integration_test.py  debug_test.sh  dev.sh  docker-compose.yml  mkdocs.yml  pyproject.toml  review_data_1758365208.77916.json  review_data_1758366151.128219.json  review_data_1758367458.057674.json  webhook.py
.github/workflows/: ci.yml  deploy.yml  docs.yml
.junior/prompts/: review.md
docs/: adding_backends.md  agent_backends.md  architecture.md  ci.md  cli.md  configuration.md  faq.md  index.md  prompt_injection.md  prompts.md  review.md  usage.md
docs-site/: README.md  astro.config.mjs  package-lock.json  package.json
docs-site/plugins/: remark-mermaid.mjs  remark-rewrite-links.mjs  remark-strip-title.mjs
docs-site/public/: CNAME
docs-site/src/: content.config.ts
docs-site/src/components/: EditLink.astro
docs-site/src/content/docs/: adding_backends.md  adding_harnesses.md  adding_runbooks.md  agent_backends.md  architecture.md  ci.md  cli.md  configuration.md  faq.md  getting_started.md  glossary.md  index.mdx  philosophy.md  prompt_injection.md  prompts.md  script_runbooks.md  use_cases.md
docs-site/src/content/docs/agent_backends/: claudecode.md  codex.md  deepagents.md  pi.md  pydantic.md
docs-site/src/content/docs/architecture/: runbooks.md
docs-site/src/content/docs/examples/prompts/: common.md  docs.md  security.md
docs-site/src/content/docs/examples/runbooks/weather/: README.md  collect.py  prompt.md  publish.py  schema.json  weather.yaml
docs-site/src/content/docs/runbook_example/: 00_test_repo.md  01_collect.md  02_context_build.md  03_prompts.md  04_review.md  05_publish.md  README.md  output.md
docs-site/src/styles/: custom.css
docs/agent_backends/: claudecode.md  codex.md  deepagents.md  pydantic.md
docs/pipeline_example/: 00_test_repo.md  01_collect.md  02_context_build.md  03_prompts.md  04_review.md  05_publish.md  README.md
helm/junior/: Chart.yaml  values.yaml
helm/junior/templates/: _helpers.tpl  deployment.yaml  secret.yaml  service.yaml
scripts/: quick_test.py  setup_webhook.py  start.sh  test_complete_flow.py  test_webhook_simple.py
src/junior/: __init__.py  __main__.py  agent.py  api.py  app.py  bitbucket_api.py  cli.py  config.py  git_client.py  github_api.py  github_client.py  init_config.py  interactive.py  mcp_tools.py  models.py  prompt_loader.py  repository_analyzer.py  review_agent.py  run_record.py  webhook.py
src/junior/agent/: __init__.py  claudecode.py  codex.py  deepagents.py  mcp_tools.py  prompts.py  pydantic.py  react_agent.py  review_agent.py  review_logic.py  review_utils.py  tools.py
src/junior/agent/core/: __init__.py  context_builder.py  instructions.py
src/junior/cli/: __init__.py  actions.py  app.py  config_show.py  console.py  listing.py  observability.py  options.py  runs.py  settings_builder.py
src/junior/collect/: __init__.py  bitbucket.py  github.py  gitlab.py  local.py
src/junior/collect/core/: __init__.py  collect.py  comments.py  diff.py
src/junior/harnesses/: __init__.py  _shared.py  claudecode.py  codex.py  deepagents.py  pi.py  pydantic.py
src/junior/interactive/: __init__.py  prompts.py
src/junior/prompts/: common.md  design.md  docs.md  logic.md
src/junior/publish/: __init__.py  bitbucket.py  github.py  gitlab.py  local.py
src/junior/publish/core/: __init__.py  formatter.py
src/junior/routers/: __init__.py  health.py  review.py  webhook.py
src/junior/runbook/: __init__.py  base.py  registry.py  runner.py
src/junior/runbooks/: __init__.py
src/junior/runbooks/code_review/: __init__.py  base.py  bitbucket.py  github.py  gitlab.py  instructions.py  local.py  models.py  render.py
src/junior/runbooks/script/: __init__.py  runbook.py
src/junior/runbooks/weather/: __init__.py  render.py  runbook.py  weather_api.py
src/junior/services/: __init__.py  git_client.py  github_client.py  github_service.py  repository_service.py  review_service.py  webhook.py
tests/: __init__.py  conftest.py  test_agent.py  test_api.py  test_bitbucket.py  test_claudecode_parse.py  test_cli.py  test_cli_commands.py  test_codex.py  test_collector.py  test_config.py  test_deepagents.py  test_formatter.py  test_harnesses.py  test_init.py  test_integration.py  test_interactive.py  test_local_runbooks.py  test_models.py  test_pi_harness.py  test_prompt_loader.py  test_pydantic_harness.py  test_registry.py  test_review_agent.py  test_script_runbook.py  test_weather_runbook.py  test_webhook.py
