[project]
name = "junior"
version = "0.1.1"
description = "AI code review agent for GitLab and GitHub CI"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.12",
    "pydantic-settings>=2.13",
    "pydantic-ai-slim[anthropic,openai]>=1.70",
    "httpx>=0.28",
    "structlog>=25.0",
    "questionary>=2.1",
]

[project.optional-dependencies]
gitlab = ["python-gitlab>=8.0"]
github = []  # uses httpx (core) + gh CLI
codex = []   # uses codex CLI (Node.js)
deepagents = [
    "deepagents>=0.4.0",
    "langchain>=0.3.0",
    "langchain-anthropic>=0.3.0",
    "langchain-openai>=0.3.0",
]
all = ["junior[gitlab,deepagents]"]
dev = [
    "pytest>=9.0",
    "pytest-mock>=3.15",
    "pytest-cov>=7.0",
    "ruff>=0.15",
]

[project.scripts]
junior = "junior.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/junior"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
